--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "cap:sync": "npx cap sync android",
         "cap:copy": "npx cap copy android",
         "cap:run": "npx cap run android",
-        "debug:android": "yarn export && yarn cap:sync && yarn cap:run",
+        "cap:copy-assets": "cp src/helpers/background.js out/background.js && cp assets/groscan_notification.wav out/groscan_notification.wav",
+        "debug:android": "yarn export && yarn cap:copy-assets && yarn cap:sync && yarn cap:run",
         "vercel-build": "prisma generate && next build",
         "migrate:deploy": "prisma migrate deploy",
         "migrate:prisma": "prisma migrate dev",
@@ -31,6 +32,7 @@
         "@apollo/server": "^4.9.5",
         "@as-integrations/next": "^2.0.2",
         "@capacitor/android": "^5.5.1",
+        "@capacitor/background-runner": "^1.0.5",
         "@capacitor/core": "^5.5.1",
         "@capacitor/ios": "^5.5.1",
         "@capacitor/local-notifications": "^5.0.6",
