--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "[prisma]": {
         "editor.defaultFormatter": "Prisma.prisma"
+    },
+    "[xml]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
     }
 }
