--- a/.env.example
+++ b/.env.example
@@ -35,6 +35,7 @@ CLOUDINARY_API_SECRET=""
 # General
 
 NEXT_PUBLIC_SERVER_URL="http://localhost:3000"
+TESTING_EMAIL=""
 
 # API KEYS
 CRON_SECRET=""
