--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "introspect:prisma": "prisma introspect",
         "studio:prisma": "prisma studio",
         "format:prisma": "prisma format",
-        "seed:prisma": "prisma db seed"
+        "seed:prisma": "prisma db seed",
+        "ai:dev": "python3 ai/manage.py"
     },
     "prisma": {
         "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} src/server/db/seed.ts"
